rust_test_framework/tests/ui/duplicate_source_mixed.stderr
error: Duplicate test case value found
 --> tests/ui/duplicate_source_mixed.rs:4:15
  |
4 | #[test_params(3)]
  |               ^
